@@ -3,7 +3,6 @@ worker_processes  20;
 
 error_log  logs/error.log notice;
 
-user root nobody;
 working_directory /usr/local/nginx;
 
 events {
